poc-keycloak-angular/poc-keycloak-angular-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poc-keycloak-angular
  labels:
    app: poc-keycloak-angular
spec:
  containers:
  - name: poc-keycloak-angular
    image: ofertoio/poc-keycloak-angular
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
