poc-keycloak-angular/poc-keycloak-angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-keycloak-angular
spec:
  selector:
    app: poc-keycloak-angular
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
